Add implementation for UserRepo sprocs

--- a/server/PasswordManagerAPI/PasswordManagerAPI.csproj
+++ b/server/PasswordManagerAPI/PasswordManagerAPI.csproj
@@ -9,7 +9,13 @@
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Http" Version="8.1.0" />
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PasswordManagerAPI.Repository\PasswordManagerAPI.Repository.csproj" />
+    <ProjectReference Include="..\PasswordManagerAPI.Services\PasswordManagerAPI.Services.csproj" />
   </ItemGroup>
 
 </Project>
