--- a/server/PasswordManagerAPI/appsettings.json
+++ b/server/PasswordManagerAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PasswordManagerCS": {
+    "ConnectionString": "Server=PSUEDOENGINEERD\\TEW_SQLEXPRESS;Database=PasswordManager;Trusted_Connection=True;Encrypt=False;"
+  }
 }
