--- a/server/PasswordManagerAPI.Repository/PasswordManagerAPI.Repository.csproj
+++ b/server/PasswordManagerAPI.Repository/PasswordManagerAPI.Repository.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+  </ItemGroup>
+
 </Project>
