--- a/server/PasswordManagerAPI.Services/PasswordManagerAPI.Services.csproj
+++ b/server/PasswordManagerAPI.Services/PasswordManagerAPI.Services.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PasswordManagerAPI.Repository\PasswordManagerAPI.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
