--- a/server/PasswordManagerAPI/appsettings.json
+++ b/server/PasswordManagerAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "PasswordManagerCS": {
+  "PasswordManagerCSOptions": {
     "ConnectionString": "Server=PSUEDOENGINEERD\\TEW_SQLEXPRESS;Database=PasswordManager;Trusted_Connection=True;Encrypt=False;"
   }
 }
