Apply UserServices to UserController

--- a/server/PasswordManagerAPI/appsettings.json
+++ b/server/PasswordManagerAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "PasswordManagerCSOptions": {
     "ConnectionString": "Server=PSUEDOENGINEERD\\TEW_SQLEXPRESS;Database=PasswordManager;Trusted_Connection=True;Encrypt=False;"
+  },
+  "JwtOptions": {
+    "Issuer": "Jack",
+    "Audience": "pleabs",
+    "SecretKey": "notsosecretactuallyinsaneineededalongerwording"
   }
 }
