--- a/server/PasswordManagerAPI/PasswordManagerAPI.csproj
+++ b/server/PasswordManagerAPI/PasswordManagerAPI.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\PasswordManagerAPI.Services\PasswordManagerAPI.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
