Add asymmetric encryption using BouncyCastle

--- a/server/PasswordManagerAPI/appsettings.json
+++ b/server/PasswordManagerAPI/appsettings.json
@@ -29,5 +29,9 @@
         }
       }
     ]
+  },
+  "PemOptions": {
+    "PublicAddress": "C:\\Users\\Admin\\Downloads\\ProjectKeys\\public.pem",
+    "PrivateAddress": "C:\\Users\\Admin\\Downloads\\ProjectKeys\\keep.pem"
   }
 }
