--- a/server/PasswordManagerAPI/appsettings.json
+++ b/server/PasswordManagerAPI/appsettings.json
@@ -4,7 +4,7 @@
     "ConnectionString": "Server=PSUEDOENGINEERD\\TEW_SQLEXPRESS;Database=PasswordManager;Trusted_Connection=True;Encrypt=False;"
   },
   "JwtOptions": {
-    "Issuer": "Jack",
+    "Issuer": "PasswordManager_Jack",
     "Audience": "pleabs",
     "SecretKey": "notsosecretactuallyinsaneineededalongerwording"
   },
