--- a/client/password-manager-client/package.json
+++ b/client/password-manager-client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "axios": "^1.8.4",
     "node-rsa": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,7 +32,7 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.7.2",
-    "vite": "^5.3.4",
+    "vite": "^6.2.2",
     "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
