--- a/client/password-manager-client/package.json
+++ b/client/password-manager-client/package.json
@@ -10,16 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.3.0",
+    "@tailwindcss/vite": "^4.1.3",
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.487.0",
     "node-rsa": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss": "^4.1.3",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
+    "@types/node": "^22.14.0",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
@@ -30,7 +39,6 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.9",
     "typescript": "^5.7.2",
     "vite": "^6.2.2",
     "vite-plugin-node-polyfills": "^0.23.0"
